[tool.poetry]
name = "forecasting"
version = "0.1.0"
description = ""
authors = ["Justinjay282 <ramboyong.justinjay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pandas = "^2.2.2"
notebook = "^7.2.2"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
plotly = "^5.24.1"
numpy = "^2.1.1"
pystan = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
